# tbi_v1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.c  server.c
lib/: bitmagic.c  bitmagic.h  buf.c  buf.h  channel.c  channel.h  crc16.c  crc16.h  protocol.c  protocol.h  serializer.c  serializer.h  tbi.c  tbi.h  tbi_types.h  utils.c  utils.h
test/: test_bitmagic.c
utils/: compose.py  example.json  leakcheck.sh  leakcheck_client.sh  leakcheck_server.sh
